...
            
            //delegate
            searchSuggestionsVC.searchHistoryDelegate = self

            //configures the search bar, and embeds it within the navigation bar
            let searchBar = searchController?.searchBar
            searchBar?.placeholder = "Search for recipe name"
            searchController?.hidesNavigationBarDuringPresentation = false
            searchController?.searchBar.delegate = self
            
            navigationItem.hidesSearchBarWhenScrolling = false
            navigationItem.titleView = searchBar
            definesPresentationContext = true
...
                filterCollectionView.allowsSelection = false
                return
        }
        if (searchBar.text?.trimmingCharacters(in: CharacterSet.whitespaces))?.isEmpty == true{
            //if user enters white spaces only
            //alert
            Alert().showAlert(title: "Invalid input", message: "Empty spaces only are not allowed", vc: self)
            searchBar.text = ""
            filterCollectionView.allowsSelection = false
                    }
        else
        {
            //valid inputs
...
